--- a/styles.css
+++ b/styles.css
@@ -86,10 +86,11 @@ a:hover{
     display: inline-block;
     background-color: whitesmoke;
     width: min-content;
+    margin: 10px;
 }
 
 .proj li{
-    margin: 10px;
+    padding: 10px;
 }
 
 .p-img{
