--- a/styles.css
+++ b/styles.css
@@ -77,8 +77,7 @@ header{
     text-align: center;
     display: block;
     margin-right: 30px;
-    position: absolute;
-    top: 0px;
+    position: sticky;
     left: 0px;
 }
 
