--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,7 @@ body{
 header{
     text-align: center;
     display: block;
-    margin-right: 30px;
-    position: sticky;
+    position: absolute;
     left: 0px;
 }
 
@@ -182,6 +181,7 @@ nav li{
 
 #projects{
     text-align: center;
+    margin-right: 30px;
 }
 
 .text{
