--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ nav li{
 .outlined {
     border: solid black !important;
     border-width: 1px 0px 1px 1px !important;
-    box-shadow: 2px 2px 4px #465572;
+    box-shadow: 2px 2px 4px rgb(186, 186, 207);
 }
 
 .p-img{
