--- a/styles.css
+++ b/styles.css
@@ -341,6 +341,7 @@ footer ul {
     align-items: center;
     padding: 20px 40px;
     background: rgba(249, 250, 251, 0.8);
+    z-index: 1001;
 }
 
 .carousel-btn {
@@ -477,9 +478,9 @@ footer ul {
 
 .timeline-item {
     position: relative;
-    margin-bottom: 10px;
     display: flex;
     align-items: center;
+    width: 80%;
 }
 
 .timeline-item:nth-child(odd) {
@@ -492,16 +493,21 @@ footer ul {
 
 .timeline-content {
     width: 45%;
-    padding: 20px 20px 10px 0px;
+    padding: 20px 20px 0px 0px;
     border-radius: 10px;
     position: relative;
     transition: all 0.4s ease;
 }
 
-.timeline-content:hover {
+.timeline-content a {
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+}
+
+/*.timeline-content:hover {
     transform: translateY(-10px);
     box-shadow: 0 30px 60px rgba(0, 0, 0, 0.15);
-}
+}*/
 
 .timeline-item:nth-child(odd) .timeline-content {
     margin-right: auto;
@@ -517,14 +523,7 @@ footer ul {
     color: #667eea;
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin-bottom: 10px;
-}
-
-.timeline-item-title {
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: #2d3748;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 
 .timeline-description {
@@ -534,9 +533,6 @@ footer ul {
 }
 
 .timeline-type {
-    position: absolute;
-    top: 20px;
-    right: 20px;
     padding: 5px 12px;
     border-radius: 15px;
     font-size: 0.8rem;
@@ -555,12 +551,12 @@ footer ul {
     color: white;
 }
 
-.timeline-type.project {
+.timeline-type.publication {
     background: var(--secondary-gradient);
     color: white;
 }
 
-.timeline-type.achievement {
+.timeline-type.award {
     background: var(--warning-gradient);
     color: white;
 }
@@ -582,13 +578,18 @@ footer ul {
 /* Admin Panel Styles */
 
 .admin-mode {
-    color: white;
-    font-weight: 600;
+    color: white !important;
+    font-weight: 100;
     text-decoration: none;
-    position: fixed;
-    bottom: 100vh;
+    position: absolute;
+    bottom: 0px;
     left: 0px;
-    z-index: 1000;
+    z-index: 10;
+}
+
+.admin-mode:hover {
+    cursor: default;
+    text-decoration: none;
 }
 
 .admin-panel {
@@ -963,7 +964,7 @@ body {
         min-height: 200px;
         padding: 2rem 1.5rem;
     }
-    
+
     .timeline-container::before {
         left: 50%;
     }
@@ -986,15 +987,17 @@ body {
     .timeline-item {
         flex-direction: column;
         align-items: flex-start;
+        width: 90vw;
     }
-    
+
+
     .timeline-content {
-        width: 100%;
+        width: 90%;
         margin: 0 !important;
     }
     
     .timeline-dot {
-        left: 30px;
+        left: -5px;
     }
     
     .timeline-title {
